# libsnark_sample

4to6/: DartConfiguration.tcl
4to6/src/: CMakeLists.txt  main-layer2.cpp  main-leaf.cpp
6to4/: CMakeLists.txt
6to4/depends/: libsnark
6to4/src/: main-layer2.cpp  main-leaf.cpp  main.cpp
sample/build2/: CMakeCache.txt  Makefile  cmake_install.cmake
sample/build2/depends/: Makefile  cmake_install.cmake
sample/build2/depends/libsnark/: CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake
sample/build2/depends/libsnark/depends/: CTestTestfile.cmake  Makefile  cmake_install.cmake
sample/build2/depends/libsnark/depends/gtest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
sample/build2/depends/libsnark/depends/gtest/googlemock/: CTestTestfile.cmake  Makefile  cmake_install.cmake
sample/build2/depends/libsnark/depends/libff/: CTestTestfile.cmake  Makefile  cmake_install.cmake
sample/build2/depends/libsnark/depends/libff/libff/: CTestTestfile.cmake  Makefile  cmake_install.cmake
sample/build2/depends/libsnark/depends/libfqfft/: CTestTestfile.cmake  Makefile  cmake_install.cmake
sample/build2/depends/libsnark/depends/libfqfft/tutorials/: CTestTestfile.cmake  Makefile  cmake_install.cmake
sample/build2/depends/libsnark/libsnark/: CTestTestfile.cmake  Makefile  cmake_install.cmake
sample/build2/src/: Makefile  cmake_install.cmake
sample/depends/: libsnark
sample/src/: CMakeLists.txt  main-layer2.cpp  main-leaf-unpacked.cpp  main-leaf.cpp  main.cpp  main.cpp.bak2  main.cpp.bak3  main.cpp.bak4  main.cpp.bak5  main.cpp.bak6
(+3 files in other folders)
